# module_tfn

./: CMakeLists.txt  README.md
apps/widgets/: CMakeLists.txt  TransferFunctionWidget.cpp  TransferFunctionWidget.h
module/: CMakeLists.txt
module/core/: ConvertTFNParaView.cpp
module/widgets/: CMakeLists.txt  TransferFunctionWidget.cpp  TransferFunctionWidget.h
ospray/: CMakeLists.txt  moduleInit.cpp
ospray/transferFunction/: Linear2DTransferFunction.cpp  Linear2DTransferFunction.h  Linear2DTransferFunction.ih  Linear2DTransferFunction.ispc
tfn/: CMakeLists.txt  TransferFunctionModule.cpp  TransferFunctionModule.h
tfn_reader/: CMakeLists.txt  convertParaViewTfcn.cpp  tfn_lib.cpp  tfn_lib.h
